styles.css
/* ... */
.width {
  max-width: 650px;
  text-align: justify;
}

.secondary-text-colour {
  color: var(--main-secondary-colour);
}

.left-entry,
.right-entry,
.bottom-entry,
.skills-entry,
.about-me-entry {
  opacity: 0;
  transition: all 1s;
}

li {
  text-decoration: none;
  list-style-type: none;
}

.left-entry {
  transform: translateX(-30%);
}

.right-entry {
  transform: translateX(30%);
}

.bottom-entry {
  transform: translateY(100%);
}

.skills-entry {
  transform: translateX(100%);
}

.about-me-entry {
  transform: translateX(-100%);
}

#button-container {
  margin-top: 0.8em;
  transition-delay: 1000ms;
}

.show {
  opacity: 1;
  transform: translateX(0);
  transform: translateY(0);
}

a,
button {
  text-decoration: none;
}

#about-me-button {
  transition-delay: 0.3s;
}

.button {
  position: relative;
  background-color: var(--main-secondary-colour);
  border-radius: 5px;
  font-size: 1rem;
  color: white;
  padding: 0.8em 1.8em;
  cursor: pointer;
  user-select: none;
  text-align: center;
  text-decoration: none;
  border: none;
  cursor: pointer;
  transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s; /* Safari */
}

.button:after {
  content: "";
  display: block;
  position: absolute;
  border-radius: 5px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all 0.5s;
  box-shadow: 0 0 10px 20px white;
}

.button:active:after {
  box-shadow: 0 0 0 0 white;
  position: absolute;
  border-radius: 5px;
  left: 0;
  top: 0;
  opacity: 1;
  transition: 0s;
}

.button:hover {
  border-color: transparent;
  transform: scale(1.2);
  transition: 0.3s;
}

/* about me CSS */

.skill-images {
  width: auto;
  height: 4rem;
  margin-bottom: 0.5em;
}

.mongo-image {
  width: 2rem;
}

.tailwind-image {
  width: 6rem;
}

.skill-text {
  color: white;
  font-size: 0.8rem;
}

.skill-container {
  width: 6rem;
  height: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 4px var(--main-secondary-colour) solid;
  padding: 1.5rem;
  border-radius: 10px;
}

ul {
  text-decoration: none;
  list-style-type: none;
}

#skills-list {
  display: grid;
  grid-template-columns: repeat(3, auto);
  gap: 1rem;
}

#skills-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#about-me {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.about-me-container {
  gap: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#about-me-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--main-font-colour);
  width: 47%;
}

.me-picture {
  width: 60%;
  border-radius: 50%;
  margin-bottom: 1rem;
  border: 3px solid var(--main-secondary-colour);
}

.about-heading,
.projects-heading,
.contact-me-heading {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.about-heading {
  margin-bottom: 6rem;
}

.about-text-space {
  margin-bottom: 1em;
}

.skill-container:nth-child(1) {
  transition-delay: 1000ms;
}

.skill-container:nth-child(2) {
  transition-delay: 1200ms;
}

.skill-container:nth-child(3) {
  transition-delay: 1400ms;
}

.skill-container:nth-child(4) {
  transition-delay: 1800ms;
}

.skill-container:nth-child(5) {
  transition-delay: 2000ms;
}

.skill-container:nth-child(6) {
  transition-delay: 2200ms;
}

.skill-container:nth-child(7) {
  transition-delay: 2600ms;
}

.skill-container:nth-child(8) {
  transition-delay: 2800ms;
}

.skill-container:nth-child(9) {
  transition-delay: 3000ms;
}

.skill-container:nth-child(10) {
  transition-delay: 3400ms;
}

.skill-container:nth-child(11) {
  transition-delay: 3600ms;
}

.skill-container:nth-child(12) {
  transition-delay: 3800ms;
}

.test {
  background-color: #111827;
}

/* projects css */

#projects {
  min-height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.projects-heading {
  margin-bottom: 4rem;
}

#projects-container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 8rem;
}

#fe-news-description {
  display: flex;
  flex-direction: column;
}

#fe-news-container,
#be-news-container,
#my-plants-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 3rem;
}

.tertiary-header {
  font-size: 2rem;
  color: var(--main-font-colour);
}

.bottom-space {
  margin-bottom: 2rem;
}

.button-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.button2 {
  width: 11rem;
  position: relative;
  border-bottom: none;
  font-size: 1rem;
  color: white;
  padding: 0.8em 1.8em;
  cursor: pointer;
  user-select: none;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  background-image: linear-gradient(to top, var(--main-secondary-colour) 50%, transparent 50%);
  background-size: 100% 200%;
  background-position: top;
  transition: background-position 0.3s ease-in-out;
}

.button2::after {
  content: "";
  position: absolute;
  height: 0.2rem;
  width: 100%;
  left: 0;
  bottom: 0;
  background: var(--main-secondary-colour);
}

button {
  background-color: var(--main-bg-colour);
  border: none;
  text-decoration: none;
}

.project-image {
  width: 48rem;
}

.button2:hover {
  background-position: bottom;
}

.mock-up-container {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(4, 1fr);
}

.my-plants-mock-up {
  width: 10rem;
  height: auto;
}

.fe-news-image-container,
.be-news-image-container,
.mock-up-container {
  transition: scale, 0.3s;
}

.fe-news-image-container:hover,
.be-news-image-container:hover,
.mock-up-container:hover {
  scale: 0.95;
}

/* contact me */

#contact-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  justify-content: space-between;
  height: 100vh;
}
/* ... */

